# Warehouse

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml  test.db
tests/: test_main.py
warehouse/: config.py  crud.py  database.py  dependencies.py  exceptions.py  main.py  models.py  repository.py  schemas.py  service.py
warehouse/repositories/: repository_orders.py  repository_products.py
