[tool.poetry]
name = "warehouse"
version = "0.1.0"
description = ""
authors = ["Igor <iiigorrr@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.115.0"}
sqlalchemy = "^2.0.35"
python-dotenv = "^1.0.1"
mysql-connector-python = "^9.0.0"
pytest = "^8.3.3"
pre-commit = "^4.0.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.12.0"
isort = "^5.13.2"
pylint = "^3.3.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
